Adding Kirundi language clarat-org/clarat#1207

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -26,6 +26,8 @@ ar:
           anonymous: 
       update_request: NOTRANSLATE
   anonymous: 
+  arabisch: 
+  arb: 
   cells:
     contact_people:
       dr: ".د"
@@ -791,6 +793,7 @@ ar:
         pus: لغة بشتوية - پښتو‎
         rom: لغة رومنية - Romani
         ron: لغة رومانية - română
+        run: كيروندي
         rus: لغة روسية - русский
         sdh: الكورمانجية - كورمانجى / Kurmancî
         skr: لغة صربية كرواتية - српскохрватски / hrvatskosrpski
@@ -1128,6 +1131,7 @@ ar:
       magdalena: 'درست مجالات مختلفة من دراسات أمريكا اللاتينية. هذا يعني أنها تعرف الكثير عن الثقافة والسياسة في أمريكا اللاتينية. هي قادرة على التخطيط والتنظيم في العمل. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Summer Breeze ل. CocoRosie.  '
       marcus: مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي Hysteria ل. MUSE
       marie: باحثة في مجال السلام والصراع. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. هي قادرة على تجميع المعلومات وترتيبها بشكل سريع. في كلارات هي عضوة بفريق البحث. أغنيتها المفضلة هي Move On Up ل. Curtis Mayfield..
+      meta_description: 
       michaela: درست نظم معلومات اقتصادية. يمكنها أن تحمس الناس لشئ ما. وهي تعرف وسائل الإتصال الحديثة جيداً. في كلارات هي عضوة في الفريق البحثي. وتعتني بأن صفحتنا على الإنترنت تعمل بشكل جيد. أغنيتها المفضلة هي Digital Love ل.Daft Punk.
       nahla: 'متخصصة في علم الآثار. تعرف الكثير عن تاريخ البشر. يمكنها العمل جيداً وبسرعة. في كلارات هي عضوة بفريق الترجمة وتقوم بترجمة كلارات إلى اللغة العربية. أغنيتها المفضلة هي نسم علينا الهوى لفيروز. '
       nathalie: درست حقوق الإنسان وسياسة دولية. قادرة على شرح الأمور جيداً. وهي مستمعة جيدة. في كلارات هي عضوة بالفريق البحثي. أغنيتها المفضلة هي Me in You ل.Convenience.
