--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -26,6 +26,8 @@ tr:
           anonymous: 
       update_request: NOTRANSLATE
   anonymous: 
+  arabisch: 
+  arb: 
   cells:
     contact_people:
       dr: Dr.
@@ -800,6 +802,7 @@ tr:
         pus: Peştuca - پښتو‎
         rom: Çingenece - Romani
         ron: Rumence - română
+        run: Kirundi
         rus: Rusça - русский
         sdh: Kurmanci - كورمانجى / Kurmancî
         skr: Sırp-Hırvatça - српскохрватски / hrvatskosrpski
@@ -1126,6 +1129,7 @@ tr:
       magdalena: 
       marcus: bir web tasarımcısı. Bu, internet sayfaları programlayabildiği ve tasarlayabildiği anlamına geliyor. Aynı zamanda plan yapma yeteneği oldukça iyi. clarat’da IT ekibinde yer alıyor ve internet sayfamızın güzel görünmesini sağlıyor. En sevdiği şarkı Muse’un Hysteria şarkısı.
       marie: 
+      meta_description: 
       michaela: 
       nahla: 
       nathalie: 
