--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -26,6 +26,8 @@ fr:
           anonymous: 
       update_request: NOTRANSLATE
   anonymous: 
+  arabisch: 
+  arb: 
   cells:
     contact_people:
       dr: Dr.
@@ -881,6 +883,7 @@ fr:
         pus: Pachto - پښتو‎
         rom: Romani - Romani
         ron: Roumain - română
+        run: Kirundi
         rus: Russe - русский
         sdh: Kurmanji - كورمانجى / Kurmancî
         skr: Serbo-croate - српскохрватски / hrvatskosrpski
@@ -935,6 +938,9 @@ fr:
         about: À propos de nous
         blog: Blog
         contact: Contact
+        facebook-family: 
+        facebook_family: clarat family
+        facebook_refugees: clarat refugees
         faq: Questions fréquentes
         fb:
           anchor: Facebook
